DATAREDIS-525 - Upgrade to lettuce 5.0.0.Beta1.
- Replace deprecated method usage by using newly introduced API.
- Improve converter names, remove unused code, fix generics.

Original pull request: #229.